Some minor changes
FIX:
1. Commented out unused import statements in main.py
2. Now gameOver.py and falling_objects.py raises an Exception when run as script.
3 Falling Objects now spawns with sizes proportional to player's luck.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@
 .idea/workspace.xml
 .idea/vcs.xml
 .idea/misc.xml
+*.pyc
+*.pyc
+pong/__pycache__/ball.cpython-36.pyc
+__pycache__/main.cpython-36.pyc
+entity/__pycache__/entity.cpython-36.pyc
+fallingObjects/__pycache__/constants.cpython-36.pyc
+*.pyc
+*.pyc
